--- a/Magic_Web/Views/VillaNumber/CreateVillaNumber.cshtml
+++ b/Magic_Web/Views/VillaNumber/CreateVillaNumber.cshtml
@@ -1,10 +1,10 @@
 @model Magic_Web.Models.VM.VillaNumberCreateVM
 
 <form asp-action="CreateVillaNumber">
-    <br />
+    <br/>
     <div class="container border p-3">
         <h1 class="text-primary">Create Villa</h1>
-        <hr />
+        <hr/>
 
         <div class="row">
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -13,7 +13,7 @@
                 <label asp-for="VillaNumber.VillaNo" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="VillaNumber.VillaNo" class="form-control" />
+                <input asp-for="VillaNumber.VillaNo" class="form-control"/>
                 <span asp-validation-for="VillaNumber.VillaNo" class="text-danger"></span>
             </div>
 
@@ -33,12 +33,12 @@
                 <textarea asp-for="VillaNumber.SpecialDetails" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="VillaNumber.SpecialDetails" class="text-danger"></span>
             </div>
-           
+
             <div class="col-5 offset-2">
-                <a asp-action="IndexVilla" asp-controller="Villa" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="IndexVillaNumber" asp-controller="VillaNumber" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="btn btn-success form-control" />
+                <input type="submit" value="Create" class="btn btn-success form-control"/>
             </div>
         </div>
     </div>
@@ -46,5 +46,5 @@
 
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
