--- a/Magic_Web/Views/Villa/CreateVilla.cshtml
+++ b/Magic_Web/Views/Villa/CreateVilla.cshtml
@@ -1,5 +1,5 @@
 @model Magic_Web.Models.Dto.VillaCreateDTO
-<form asp-action="CreateVilla">
+<form asp-action="CreateVilla" enctype="multipart/form-data">
     <br />
     <div class="container border p-3">
         <h1 class="text-primary">Create Villa</h1>
@@ -36,8 +36,9 @@
                 <label asp-for="ImageUrl" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <input asp-for="Image" class="form-control" />
+                <input asp-for="ImageUrl" hidden class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
 
             <div class="col-2">
@@ -72,3 +73,8 @@
         </div>
     </div>
 </form>
+
+                
+@section Scripts {
+    <partial name="_ValidationScriptsPartial"/>
+}
